# getxerpa

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
getxerpa/apps/enrichment/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
getxerpa/apps/enrichment/fixtures/: categories.json  categorytypes.json  keywords.json  merchants.json
getxerpa/apps/enrichment/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at_and_more.py  0003_keyword_weight.py  0004_keyword_category_alter_keyword_merchant.py  0005_remove_category_type_delete_categorytype.py  0006_category_type.py  0007_keyword_check_either_merchant_or_category_and_only_one_is_null.py
getxerpa/apps/transactions/: apps.py  models.py  serializers.py  urls.py  views.py
getxerpa/apps/transactions/fixtures/: transactions.json
getxerpa/apps/transactions/migrations/: 0001_initial.py  0002_transaction_created_at_transaction_updated_at.py
getxerpa/apps/users/: admin.py  apps.py  models.py
getxerpa/apps/users/migrations/: 0001_initial.py
getxerpa/config/: asgi.py  settings.py  urls.py  wsgi.py
getxerpa/config/develop/: settings.py  urls.py
